--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "client:start": "cd frontend && npm start"
+    "start": "node index.js",
+    "server:dev": "nodemon index.js",
+    "client:start": "npm start --prefix frontend",
+    "client:install": "npm install --prefix frontend",
+    "dev": "concurrently \"npm run server:dev\" \"npm run client:start\""
   },
   "repository": {
     "type": "git",
@@ -17,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/mateuszwszola/blogging-platform/issues"
   },
-  "homepage": "https://github.com/mateuszwszola/blogging-platform#readme"
+  "homepage": "https://github.com/mateuszwszola/blogging-platform#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
