--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,12 @@
 {
   "name": "blogging-platform",
   "version": "1.0.0",
-  "description": "",
+  "description": "A full stack application to start a blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "server:dev": "nodemon index.js",
-    "client:start": "npm start --prefix frontend",
-    "client:install": "npm install --prefix frontend",
-    "dev": "concurrently \"npm run server:dev\" \"npm run client:start\""
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "lint": "eslint src/"
   },
   "repository": {
     "type": "git",
@@ -23,9 +20,15 @@
   "homepage": "https://github.com/mateuszwszola/blogging-platform#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2"
   }
 }
