--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,15 @@
   },
   "homepage": "https://github.com/mateuszwszola/blogging-platform#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.11",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
