--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,5 +41,6 @@
     "autoprefixer": "^9.7.4",
     "postcss-cli": "^7.1.0",
     "tailwindcss": "^1.1.4"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
