--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "clsx": "^1.0.4",
     "react": "^16.12.0",
     "react-async": "^10.0.0",
+    "react-async-devtools": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
