--- a/server/package.json
+++ b/server/package.json
@@ -24,11 +24,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
     "express-validator": "^6.4.0",
     "helmet": "^3.21.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
+    "rate-limit-mongo": "^2.1.0",
     "slugify": "^1.4.0",
     "validator": "^12.2.0"
   },
