add redirects rule to enable client side routing

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   base = "frontend"
   publish = "build/"
   command = "npm run build"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
