--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.1",
     "@testing-library/user-event": "^10.0.0",
-    "axios": "^0.19.2",
     "clsx": "^1.1.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
@@ -25,7 +24,8 @@
     "eject": "react-scripts eject",
     "build:styles": "postcss src/tailwind.css -o src/styles.css",
     "prebuild": "NODE_ENV=production npm run build:styles",
-    "prestart": "npm run build:styles"
+    "prestart": "npm run build:styles",
+    "format": "prettier \"src/\" --write"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +46,7 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "autoprefixer": "^9.7.5",
     "postcss-cli": "^7.1.0",
+    "prettier": "^2.0.2",
     "tailwindcss": "^1.2.0"
   }
 }
