--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:styles": "postcss src/tailwind.css -o src/styles.css",
+    "build:styles": "postcss src/styles/tailwind.css -o src/styles/index.css",
     "prebuild": "NODE_ENV=production npm run build:styles",
     "prestart": "npm run build:styles",
     "format": "prettier \"src/\" --write"
