--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,10 @@
     "@testing-library/react": "^10.0.1",
     "@testing-library/user-event": "^10.0.0",
     "clsx": "^1.1.0",
+    "draft-js": "^0.11.5",
+    "draft-js-hashtag-plugin": "^2.0.4",
+    "draft-js-linkify-plugin": "^2.0.2",
+    "draft-js-plugins-editor": "^3.0.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-async": "^10.0.0",
