--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^10.0.0",
     "clsx": "^1.1.0",
     "draft-js": "^0.11.5",
+    "draft-js-emoji-plugin": "^2.1.3",
     "draft-js-hashtag-plugin": "^2.0.4",
     "draft-js-linkify-plugin": "^2.0.2",
     "draft-js-plugins-editor": "^3.0.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-async": "^10.0.0",
