--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "blog-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://blogging-platform.netlify.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.1",
