--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "rate-limit-mongo": "^2.1.0",
     "slugify": "^1.4.0",
     "validator": "^12.2.0"
