--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "homepage": "https://blogging-platform.netlify.app/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.1",
     "@testing-library/user-event": "^10.0.0",
+    "axios": "^0.19.2",
     "clsx": "^1.1.0",
     "draft-js": "^0.11.5",
     "draft-js-emoji-plugin": "^2.1.3",
