configure server testing environment

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=development
 PORT=3001
 CORS_ORIGIN=http://localhost:3000
-DB_URL=mongo_db_url
+DB_URL=mongodb://localhost:27017/blogging-platform
 JWT_KEY=key
+JWT_EXP=3600
