--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "test": "cross-env NODE_ENV=testing jest",
+    "test:watch": "npm test --watch",
     "format": "prettier \"src/\" --write",
     "lint": "eslint src/"
   },
@@ -24,6 +26,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "cuid": "^2.1.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
@@ -31,6 +35,7 @@
     "helmet": "^3.21.3",
     "jimp": "^0.10.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
@@ -39,10 +44,15 @@
     "validator": "^12.2.0"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.9.0",
+    "jest": "^26.0.1",
+    "mongodb": "^3.5.7",
     "nodemon": "^2.0.2",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
