--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "cross-env NODE_ENV=testing jest",
-    "test:watch": "npm test --watch",
+    "test:watch": "npm test -- --watch",
     "format": "prettier \"src/\" --write",
     "lint": "eslint src/"
   },
