--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "homepage": "https://blogging-platform.netlify.app/",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.1.0",
@@ -21,9 +18,10 @@
     "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-async": "^10.0.1",
-    "react-async-devtools": "^10.0.1",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
+    "react-query": "^1.5.2",
+    "react-query-devtools": "^1.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "uuid": "^8.0.0"
