--- a/server/.gitignore
+++ b/server/.gitignore
@@ -20,5 +20,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-TODO
 .now
+now.json
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+.ebextensions/*
+!.ebextensions/nodecommand.config
