--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,14 @@
   },
   "homepage": "https://github.com/mateuszwszola/blogging-platform#readme",
   "dependencies": {
+    "aws-sdk": "^2.701.0",
     "bad-words": "^3.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "cuid": "^2.1.8",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
@@ -40,6 +42,7 @@
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "rate-limit-mongo": "^2.1.0",
     "slugify": "^1.4.0",
     "validator": "^12.2.0"
