--- a/server/.gitignore
+++ b/server/.gitignore
@@ -13,6 +13,7 @@
 
 # misc
 .DS_Store
+
 .env
 .env.prod
 .serverless
@@ -20,8 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
 .now
 now.json
+.vscode
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
