--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "rate-limit-mongo": "^2.1.0",
+    "sinon": "^9.0.2",
     "slugify": "^1.4.0",
     "validator": "^12.2.0"
   },
