--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "cross-env NODE_ENV=testing jest",
+    "test": "cross-env NODE_ENV=testing jest --testTimeout=10000",
     "test:watch": "npm test -- --watch",
     "format": "prettier \"src/\" --write",
     "lint": "eslint src/"
@@ -26,9 +26,11 @@
     "bad-words": "^3.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.22.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "cuid": "^2.1.8",
+    "datauri": "^3.0.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
