--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,8 @@ CORS_ORIGIN=http://localhost:3000
 DATABASE_URL=mongodb://localhost:27017/blogging-platform
 JWT_KEY=key
 JWT_EXP=3600
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
