--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index",
     "dev": "nodemon index",
-    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 --forceExit --detectOpenHandles",
-    "test:watch": "npm test -- --watch",
+    "test:unit": "jest --testPathPattern=tests/unit",
+    "test:integration": "jest --testTimeout=10000 --forceExit --detectOpenHandles --testPathPattern=tests/integration",
     "format": "prettier \"src/\" --write",
     "lint": "eslint src/"
   },
@@ -48,6 +48,7 @@
     "rate-limit-mongo": "^2.1.0",
     "sinon": "^9.0.2",
     "slugify": "^1.4.0",
+    "typedi": "^0.8.0",
     "validator": "^12.2.0"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.9.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.0.1",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
