--- a/server/package.json
+++ b/server/package.json
@@ -34,12 +34,13 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.1.1",
     "express-validator": "^6.4.0",
     "helmet": "^3.21.3",
     "jimp": "^0.10.3",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
